dev/wordpress-deployment.yaml
# ===========================
# WordPress: Deployment
# ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:beta-php8.3-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
          subPath: html
        - name: wordpress-content-storage
          mountPath: /var/www/html/wp-content
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      - name: wordpress-content-storage
        persistentVolumeClaim:
          claimName: wordpress-content-claim
