dev/wordpress-service.yaml
# ===========================
# WordPress: Service
# ===========================
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: wordpress
  internalTrafficPolicy: Cluster
